[package]
name = "crypto-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.8.0"
chrono = "0.4.24"
dotenvy = "0.15.0"
diesel = { version = "2.0.3", features = ["postgres"]}
diesel_migrations = "2.0.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
listenfd = "1.0.1"
serde = "1.0.160"
serde_json = "1.0.95"
r2d2 = "0.8.10"
uuid = "1.3.1"